--- a/Task_1/index.html
+++ b/Task_1/index.html
@@ -13,7 +13,7 @@
             crossorigin="anonymous"
         />
 
-        <link rel="stylesheet" href="../css/all.min.css" />
+        <link rel="stylesheet" href="css/all.min.css" />
     </head>
     <body>
         <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
